--- a/less/sections/burger.less
+++ b/less/sections/burger.less
@@ -99,4 +99,9 @@
     top: 0;
     transform: rotate(-45deg);
   }
+  .burger-menu_active .header-list{
+    // display: flex;
+    opacity: 1;
+    overflow: visible;
+  }
   
