--- a/less/sections/header.less
+++ b/less/sections/header.less
@@ -56,8 +56,10 @@
         }
 
         @media (max-width: 950px) {
-            display: none;
-            transition: 0.5s;
+            // display: none;
+            transition: 0.3s;
+            overflow: hidden;
+            opacity: 0;
         }
 
 
@@ -85,6 +87,7 @@
         &__link {
             font-size: 22px;
             color: white;
+            cursor: pointer;
 
             @media (max-width: 1440px) {
                 font-size: 20px;
