--- a/less/sections/form.less
+++ b/less/sections/form.less
@@ -136,7 +136,9 @@
 
         &__item {
             padding: 0 20px;
-            @media (max-width: 1200px) {
+
+            @media (max-width: 650px) {
+                padding: 0;
                 // padding: 0 20px;
             }
 
@@ -146,13 +148,18 @@
             }
         }
 
-        &__link {}
+        &__link {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
         &__img {
 
             // width: 120px;
             // width: 80px;
-            @media (max-width: 1440px) {
+            @media (max-width: 650px) {
+                max-width: 80%;
                 // line-height: 1.2;
             }
         }
