--- a/less/sections/form.less
+++ b/less/sections/form.less
@@ -124,6 +124,7 @@
         display: flex;
         justify-content: center;
         padding: 0 25px;
+        margin: 0 auto;
 
         @media (max-width: 1200px) {
             justify-content: center;
@@ -138,7 +139,7 @@
             padding: 0 20px;
 
             @media (max-width: 650px) {
-                padding: 0;
+                padding: 0 5px;
                 // padding: 0 20px;
             }
 
@@ -149,9 +150,9 @@
         }
 
         &__link {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
         }
 
         &__img {
@@ -159,7 +160,9 @@
             // width: 120px;
             // width: 80px;
             @media (max-width: 650px) {
-                max-width: 50%;
+                max-width: 40px;
+                
+                // max-width: 50%;
                 // line-height: 1.2;
             }
         }
